# mor

./: README.md
input/: vlcsnap-2014-11-20-14h22m56s16.tiff  vlcsnap-2014-11-20-14h22m56s20.tiff  vlcsnap-2014-11-20-14h22m56s24.tiff  vlcsnap-2014-11-20-14h22m57s30.tiff  vlcsnap-2014-11-20-14h22m57s32.tiff
output/: output_median.tiff  output_median_0_median.tiff  output_median_registered.tiff  output_median_using_chutiya_cycle.tiff  output_median_vid.tiff  output_median_without_shear.tiff  output_mode.tiff
src/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  affine  affine.cpp  align_affine  align_affine.cpp  cmake_install.cmake  feature_matching  feature_matching.cpp  file.txt  files.sh  get_mask  get_mask.cpp  image_alignment  image_alignment.cpp  median  median.cpp  outWarp.ecc  raw_file.txt  raw_files.sh  registration  registration.cpp
video_input/: vlcsnap-2014-11-20-14h22m55s10.tiff  vlcsnap-2014-11-20-14h22m55s12.tiff  vlcsnap-2014-11-20-14h22m55s14.tiff  vlcsnap-2014-11-20-14h22m55s6.tiff  vlcsnap-2014-11-20-14h22m55s8.tiff  vlcsnap-2014-11-20-14h22m56s18.tiff  vlcsnap-2014-11-20-14h22m56s22.tiff  vlcsnap-2014-11-20-14h22m57s26.tiff  vlcsnap-2014-11-20-14h22m57s28.tiff
